[package]
name = "twiddle"
version = "0.3.0"
authors = ["Nicolette Verlinden <nicole@nicole.moe>"]

description = "Bit-twiddling utility functions"

documentation = "https://docs.rs/twiddle"
repository = "https://github.com/niconii/twiddle"

readme = "README.md"
keywords = ["bitwise", "bit", "bits"]

license = "MIT/Apache-2.0"

[features]
default-features = []
inclusive_range = []
unstable = ["inclusive_range"]
