[package]
name = "twiddle"
version = "1.1.0"
authors = ["Nicolette Verlinden <nicole@nicole.moe>"]

description = "Bit-twiddling utility functions"

documentation = "https://docs.rs/twiddle"
repository = "https://github.com/niconii/twiddle"

readme = "README.md"
keywords = ["bitwise", "bit", "bits"]

license = "MIT/Apache-2.0"
